[bdist_wheel]
universal = 1

[metadata]
author = John Parton
name = django-ltree-utils
python_requires = >=3.6
description = Ready-built Django managers and models for PostgreSQL trees
long_description = file: README.rst, CHANGELOG.rst
url = https://github.com/john-parton/django-ltree-utils/
license = BSD 3-Clause License
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Django
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8


[options]
zip_safe = False
include_package_data = True
